# succinct_global_sp1

./: README.md
back/: Cargo.toml
back/example/program/: Cargo.toml
back/example/program/src/: main.rs
back/example/script/: Cargo.toml  build.rs
back/example/script/src/: main.rs
front/: index.html  script.js  style.css
front/wasm/: sp1_wasm_verifier_bg.wasm
