[package]
version = "0.1.0"
name = "example-script"
edition = "2021"

[dependencies]
sp1-sdk.workspace = true
clap = { version = "4.0", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }


[build-dependencies]
sp1-build.workspace = true
